--- a/tge3/localisation/gt_technology_l_german.yml
+++ b/tge3/localisation/gt_technology_l_german.yml
@@ -1,9 +1,27 @@
 ﻿l_german:
 
+ ##########################
+ ### Starbase Buildings ###
+ ##########################
+ sm_gt_trading_company_offices:0 "Trading Company Offices"
+ sm_gt_trading_company_offices_desc:0 "Offices for the many private enterprizes trading across all known space."
+ 
+ sm_gt_bounty_hunter_office:0 "Bounty Hunter Offices"
+ sm_gt_bounty_hunter_office_desc:0 "Offices dedicated to the contracts and payouts of bounty hunters."
+
 
  ###################
  ###### MODS #######
  ###################
+ 
+ mod_weapon_role_artillery_weapon_damage_mult:0 "Artillery Weapons Damage"
+ mod_weapon_role_artillery_weapon_fire_rate_mult:0 "Artillery Weapons Attack Speed"
+ mod_weapon_role_anti_hull_weapon_damage_mult:0 "Anti-Hull Weapons Damage"
+ mod_weapon_role_anti_hull_weapon_fire_rate_mult:0 "Anti-Hull Weapons Attack Speed"
+ mod_weapon_role_anti_shield_weapon_damage_mult:0 "Anti-Shield Weapons Damage"
+ mod_weapon_role_anti_shield_weapon_fire_rate_mult:0 "Anti-Shield Weapons Attack Speed"
+ mod_weapon_role_anti_armor_weapon_damage_mult:0 "Anti-Armor Weapons Damage"
+ mod_weapon_role_anti_armor_weapon_fire_rate_mult:0 "Anti-Armor Weapons Attack Speed"
 
  mod_megastructures_physics_research_produces_mult:0 "Megastruktur £physics_research£ c Forschung Output"
  mod_megastructures_society_research_produces_mult:0 "Megastruktur £society_research£ Sozial Forschung Output"
